--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URI = mongodb+srv://test:testpswd@cluster0.uphzl.mongodb.net/?retryWrites=true&w=majority
+URI = mongodb+srv://test:testpswd@cluster0.uphzl.mongodb.net/IMDB?retryWrites=true&w=majority
 SECRET_KEY = movie
